...
                                    <constraint firstAttribute="width" constant="60" id="fPU-xs-jk1"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0xe-dl-0se" userLabel="Login Button">
                                <rect key="frame" x="16" y="672" width="358" height="48"/>
                                <color key="backgroundColor" name="white"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="SpZ-cr-5bs"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
                                <rect key="frame" x="0.0" y="48" width="390" height="4"/>
                                <color key="tintColor" name="background"/>
                            </progressView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="NIl-wv-Pi4"/>
                        <color key="backgroundColor" name="white"/>
                        <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                        <constraints>
                            <constraint firstItem="WbE-VP-Z8i" firstAttribute="leading" secondItem="NIl-wv-Pi4" secondAttribute="leading" id="3Pz-Ix-K3m"/>
                            <constraint firstItem="P3H-MN-yG0" firstAttribute="top" secondItem="pPA-ip-0X7" secondAttribute="bottom" id="5Ma-jv-Wbh"/>
                            <constraint firstItem="WbE-VP-Z8i" firstAttribute="top" secondItem="NIl-wv-Pi4" secondAttribute="top" id="9ZN-6T-W4E"/>
...
                                <connections>
                                    <action selector="didTapShareButton" destination="skr-Vj-AAT" eventType="touchUpInside" id="03r-kS-vNP"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RGN-6Z-5Is" userLabel="Back Button">
                                <rect key="frame" x="9" y="11" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Back"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="hbU-Ye-QcZ"/>
                                    <constraint firstAttribute="width" constant="48" id="stf-sf-GU5"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="BackwardButton"/>
...
