...
            with: UIImage(named: "LogOut") ?? UIImage(),
            target: self,
            action: #selector(didTapLogoutButton)
        )
        button.tintColor = UIColor(named: "red")
        button.translatesAutoresizingMaskIntoConstraints = false
        button.accessibilityIdentifier = "Logout"
        return button
    }()
    
    lazy var presenter: ProfilePresenterProtocol = ProfilePresenter(view: self)
    
    // MARK: - Lifecycle
...
    
    @objc
    private func didTapLogoutButton() {
        let alert = AlertWithTwoActionsModel(
            title: "Пока, пока!",
            message: "Уверены, что хотите выйти?",
            primaryButtonText: "Да",
            secondaryButtonText: "Нет"
        ) { [weak self] in
            guard let self else { return }
            self.presenter.logout()
        }
        
...
