...
        button.setImage(UIImage(named: "LikeButtonNoActive"), for: .normal)
        button.addTarget(
            nil,
            action: #selector(likeButtonClicked),
            for: .touchUpInside
        )
        button.accessibilityIdentifier = "Like"
        button.translatesAutoresizingMaskIntoConstraints = false
        return button
    }()
    
    private lazy var gradient: CAGradientLayer = {
        let gradient = CAGradientLayer()
...
